--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="site-footer">
 <div class="footer-declaration"><%= theme.declaration %></div>
-	<p> &copy; <%= theme.station_time %> - <%= new Date().getFullYear() %> <a href="https://www.Fateplayer.com" target="_self" title="命运游侠">Fateplayer</a>
+	<p> &copy; <%= theme.station_time %> - <%= new Date().getFullYear() %> <a href="<%= config.url %>" target="_self" title="<%= config.title %>"><%= config.title %></a>
 		<svg class="icon icon-heart"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#heartbeat"></use></svg>
 		<a href="http://hexo.io/" target="_blank">Hexo</a> Theme <a href="https://github.com/fateplayer/hexo-theme-nonfish/" target="_blank" title="hexo-theme-nonfish">nonfish</a>
 	</p>
