--- a/layout/_partial/post/comment.ejs
+++ b/layout/_partial/post/comment.ejs
@@ -17,12 +17,23 @@
 <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
 <script>
   var cloudTieConfig = {
-    url: document.location.href, 
+    url: document.location.href,
     sourceId: "",
     productKey: "<%=config.gentie_productKey%>",
     target: "cloud-tie-wrapper"
   };
 </script>
 <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
+</section>
+<% } else if (!index && post.comments && theme.changyan){ %>
+<section id="comments">
+<div id="SOHUCS" sid="<%= post.path %>" ></div>
+	<script type="text/javascript">
+		(function(){ 
+		var appid = '<%= config.changyan_appid %>';
+		var conf = '<%= config.changyan_conf %>';
+		var width = window.innerWidth || document.documentElement.clientWidth;
+		if (width < 960) { window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("http://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })();
+	</script>
 </section>
 <% } %>
