--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,5 +1,6 @@
 <%- partial('_partial/head') %>
 <body >
+<%- partial('_partial/svg') %>
     <div class="surface-content">
       <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
       <div class="container">
